<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_8k_off">8K is off</string>
    <string name="accessibility_8k_on">8K is on</string>
    <string name="accessibility_add">Add</string>
    <string name="accessibility_ai_identify">Recognize</string>
    <string name="accessibility_ai_scene_off">AI camera is off</string>
    <string name="accessibility_ai_scene_on">AI camera is on</string>
    <string name="accessibility_ai_watermark_panel_on">AI watermark panel</string>
    <string name="accessibility_ambilight_panel_on">Open Long exposure panel</string>
    <string name="accessibility_back_preview_status">Rear camera preview</string>
    <string name="accessibility_beauty_function_button">Beautify</string>
    <string name="accessibility_beauty_function_panel_on">Beautify panel</string>
    <string name="accessibility_beauty_panel_closed">Beautify menu is hidden</string>
    <string name="accessibility_beauty_panel_open">Beautify menu is opened</string>
    <string name="accessibility_beauty_switch_closed">Beautify is off</string>
    <string name="accessibility_beauty_switch_open">Beautify is on</string>
    <string name="accessibility_bokeh_adjust">Adjusting background blur</string>
    <string name="accessibility_bokeh_level">F%1$s aperture</string>
    <string name="accessibility_bokeh_normal">Front camera background blur is off</string>
    <string name="accessibility_bokeh_on">Front camera background blur is on</string>
    <string name="accessibility_camera_lighting_close_panel">Closed lighting effects menu</string>
    <string name="accessibility_camera_lighting_open_panel">Opened lighting effects menu</string>
    <string name="accessibility_camera_liveshot_off">Turned off dynamic shots</string>
    <string name="accessibility_camera_liveshot_on">Turned on dynamic shots</string>
    <string name="accessibility_camera_picker">Front and rear camera switch</string>
    <string name="accessibility_camera_picker_finish">Switched cameras successfully</string>
    <string name="accessibility_camera_record_start">Started recording video</string>
    <string name="accessibility_camera_record_stop">Stopped recording video</string>
    <string name="accessibility_camera_shutter_finish">Took a photo successfully</string>
    <string name="accessibility_camera_switch_capture_recording">Switch between photo and video modes</string>
    <string name="accessibility_camera_ultra_wide_bokeh_off">Full body mode is off</string>
    <string name="accessibility_camera_ultra_wide_bokeh_on">Full body mode is on</string>
    <string name="accessibility_camera_video_960fps_120">120FPS</string>
    <string name="accessibility_camera_video_960fps_240">240FPS</string>
    <string name="accessibility_camera_video_960fps_960">960FPS</string>
    <string name="accessibility_camera_video_fps_120">120FPS</string>
    <string name="accessibility_camera_video_fps_30">30FPS</string>
    <string name="accessibility_camera_video_slow_motion_fps">%dFPS</string>
    <string name="accessibility_closed">Off</string>
    <string name="accessibility_color">Color</string>
    <string name="accessibility_date">Date</string>
    <string name="accessibility_delay_capture_10s_button">Timer set for ten seconds</string>
    <string name="accessibility_delay_capture_3s_button">Timer set for three seconds</string>
    <string name="accessibility_delay_capture_5s_button">Timer set for five seconds</string>
    <string name="accessibility_delay_capture_close_button">Timer is off</string>
    <string name="accessibility_description_clone_button">Clone panel</string>
    <string name="accessibility_description_dolly_zoom_button">Magic zoom</string>
    <string name="accessibility_deselect_all">Deselect all</string>
    <string name="accessibility_deselect_all_end">Deselected all</string>
    <string name="accessibility_document_blackwhite_button">Scanning documents. Black and white.</string>
    <string name="accessibility_document_origin_button">Scanning documents. Original.</string>
    <string name="accessibility_document_strengthen_button">Scanning documents. Enhanced.</string>
    <string name="accessibility_double_click_to_exit">Double tap to exit</string>
    <string name="accessibility_dual_preview_change">View changes</string>
    <string name="accessibility_dual_preview_change_finish">Viewed changes successfully</string>
    <string name="accessibility_dual_video_merged">Combined video</string>
    <string name="accessibility_dual_video_standalone">Separated videos</string>
    <string name="accessibility_effect_mode_button">Effect button</string>
    <string name="accessibility_eis_normal">Steady video is on</string>
    <string name="accessibility_eis_off">Steady video is off</string>
    <string name="accessibility_eis_pro">Steady video PRO is on</string>
    <string name="accessibility_expand">Zoom in</string>
    <string name="accessibility_fastmotion_speed_panel_on">Speed and duration panel</string>
    <string name="accessibility_filter_close_panel">Closed filter menu</string>
    <string name="accessibility_filter_open_panel">Opened filter menu</string>
    <string name="accessibility_filter_pad_close">Filter menu is hidden</string>
    <string name="accessibility_flash_auto">Auto flash is on</string>
    <string name="accessibility_flash_back_soft_light">Flash is working in the Soft light mode</string>
    <string name="accessibility_flash_off">Flash is off</string>
    <string name="accessibility_flash_on">Flash is on</string>
    <string name="accessibility_live_edit_exit_button">Exit</string>
    <string name="accessibility_live_preview_button">View previous item</string>
    <string name="accessibility_live_reverse_button">Delete previous clip</string>
    <string name="accessibility_preview_button">Preview</string>
    <string name="accessibility_shutter_button">Shutter button</string>
    <string name="accessibility_shutter_complete_button">Captured successfully</string>
    <string name="accessibility_shutter_next_button">Next</string>
    <string name="accessibility_shutter_saving_button">Saving</string>
    <string name="camera_label">Camera</string>
    <string name="cta_msg">Welcome to Camera! You can use this app to take photos and shoot videos. This app needs to connect to the internet and requires the following optional permissions:</string>
    <string name="cta_perm_dec">For adding location info to photos and videos</string>
    <string name="cta_perm_loc">Location</string>
    <string name="cta_perm_type">"Optional permissions (Used for additional features while you're using them)"</string>
    <string name="cta_user_tips"><Data>To fully understand your rights as a user as well as the ways in which we use your data, read and agree to our &lt;a href =%1$s>User Agreement&lt;/a> and &lt;a href =%2$s>Privacy Policy&lt;/a>.</Data></string>
    <string name="emoticon">Sticker pack</string>
    <string name="live_edit_share_title">Share</string>
    <string name="mimoji_back">Back</string>
    <string name="mimoji_save">Save</string>
    <string name="pref_camera_device_watermark_title">Device watermark</string>
    <string name="pref_camera_lying_summary">Notify about current orientation when the phone is parallel to the ground</string>
    <string name="pref_camera_lying_title">Notify about orientation</string>
    <string name="pref_camera_rec_type_3d_record">3D sound</string>
    <string name="pref_camera_tip_doc">Document scanner</string>
    <string name="pref_camera_tip_id_card">ID scanner</string>
    <string name="pref_camera_watermark_title">Add time stamp on photos</string>
    <string name="pref_custom_feature_layout_title">Feature layout</string>
    <string name="pref_custom_shutter_sound_title">Sound</string>
    <string name="pref_custom_tint_title">Colors</string>
    <string name="pref_customization_title">Customize</string>
    <string name="pref_e_p_k">External mic</string>
    <string name="pref_e_p_s_n">Record sound via external microphone when mic-equipped Bluetooth earphones are connected</string>
    <string name="pref_i_n_r_b">Smart noise reduction</string>
    <string name="pref_k_h">Live in-ear monitor</string>
    <string name="pref_k_s_i">Monitor recorded sound using the earphones when they are connected</string>
    <string name="pref_lens_dirty_detect_summary">Receive a notification when the lens is dirty</string>
    <string name="pref_lens_dirty_detect_title">Notify about dirty lens</string>
    <string name="pref_more_mode_style_title">Camera modes</string>
    <string name="pref_pic_flaw_tip_summary">Receive real time notifications when people in the frame close their eyes or lens is partly covered during shooting</string>
    <string name="pref_pic_flaw_tip_title">Notify about flaws</string>
    <string name="pref_s_n_r_s_c">Reduce noise in videos depending on the scene</string>
    <string name="pref_scan_qrcode_default">true</string>
    <string name="pref_scan_qrcode_summary">Only the rear camera can scan QR codes in the \"Photo\" mode.</string>
    <string name="pref_scan_qrcode_title">Scan QR codes</string>
    <string name="pref_smart_guide_title">Smart suggestions</string>
    <string name="pref_userdefine_watermark_title">Custom watermark</string>
    <string name="pref_watermark_title">Watermark</string>
    <string name="prek_b_j_o">Recreate stereo surround effect</string>
    <string name="settings_camera_detect_card_description">Display a shortcut whenever the AI camera detects an ID card</string>
    <string name="settings_camera_detect_description_doc">Display a shortcut whenever the AI camera detects a document or presentation slide</string>
    <string name="settings_camera_near_range_description">Remove blurring when focusing on flat surfaces very close up</string>
    <string name="settings_camera_near_range_title">Close focus</string>
    <string name="share">Share</string>
    <string name="vv_hint">You can only shoot vlogs in landscape mode</string>
    <string name="vv_stability_hint">Keep your device stable</string>
</resources>