<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/miuix_appcompat_dialog_pannel_horizontal_margin">
        <TextView android:textSize="@dimen/cta_title_text_size" android:textColor="@color/cta_title_text_color" android:layout_gravity="center_horizontal" android:id="@id/tv_cta_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cta_title_margin_top" android:text="@string/camera_label" android:fontFamily="mipro-medium" />
        <TextView android:textSize="@dimen/cta_msg_text_size" android:textColor="@color/cta_msg_text_color" android:id="@id/tv_cta_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cta_msg_margin_top" android:text="@string/cta_msg" android:lineSpacingExtra="@dimen/cta_msg_content_textLineSpacingExtra" android:fontFamily="mipro-regular" />
        <TextView android:textSize="@dimen/cta_perm_type_text_size" android:textColor="@color/cta_perm_type_text_color" android:id="@id/tv_perm_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cta_perm_type_margin_top" android:text="@string/cta_perm_type" android:fontFamily="mipro-normal" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cta_perm_layout_margin_top">
            <View android:id="@id/ic_location" android:background="@drawable/ic_cta_location" android:layout_width="@dimen/cta_location_icon_layout_width" android:layout_height="@dimen/cta_location_icon_layout_height" android:layout_marginTop="@dimen/cta_location_icon_margin_top" />
            <TextView android:textSize="@dimen/cta_perm_loc_text_size" android:textColor="@color/cta_perm_loc_text_color" android:id="@id/tv_cta_perm_loc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/cta_perm_loc_margin_left" android:text="@string/cta_perm_loc" android:layout_toRightOf="@id/ic_location" android:layout_alignParentTop="true" android:fontFamily="mipro-medium" />
            <TextView android:textSize="@dimen/cta_perm_dec_text_size" android:textColor="@color/cta_perm_dec_text_color" android:id="@id/tv_cta_perm_dec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/cta_perm_dec_margin_left" android:layout_marginTop="@dimen/cta_perm_dec_margin_top" android:text="@string/cta_perm_dec" android:layout_below="@id/tv_cta_perm_loc" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/cta_user_tips_text_size" android:textColor="@color/cta_user_tips_text_color" android:autoLink="web" android:id="@id/tv_cta_user_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cta_user_tips_margin_top" android:text="@string/cta_user_tips" />
    </LinearLayout>
</ScrollView>