<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.android.camera.ui.vv.VVProgressView android:id="@id/vv_progress" android:layout_width="@dimen/vv_progress_width" android:layout_height="@dimen/vv_progress_height" android:layout_marginLeft="@dimen/vv_progress_margin_left" />
    <FrameLayout android:id="@id/vv_preview_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <TextView android:textSize="@dimen/vv_hint_text_size" android:textColor="@color/white" android:layout_gravity="end|center" android:id="@id/vv_stability_hint" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-70.0dip" android:text="@string/vv_stability_hint" style="@style/ShadowStyle" />
    <TextView android:textSize="@dimen/vv_hint_text_size" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/vv_process_hint" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vv_hint" style="@style/ShadowStyle" />
    <FrameLayout android:id="@id/vv_process_video_cover" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:id="@id/vv_preview_thumb" android:focusable="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:adjustViewBounds="true" />
        <ImageView android:layout_gravity="center" android:id="@id/vv_preview_play" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_vector_play" android:scaleType="centerInside" android:contentDescription="@string/accessibility_preview_button" />
        <ProgressBar android:layout_gravity="center" android:id="@id/vv_concat_progress" android:background="@drawable/bg_thumbnail_background_full" android:padding="15.0dip" android:layout_width="@dimen/bottom_snap_progress_width" android:layout_height="@dimen/bottom_snap_progress_width" android:indeterminateDrawable="@drawable/vv_process_progress" android:indeterminateDuration="700" style="?android:progressBarStyleLarge" />
    </FrameLayout>
    <FrameLayout android:layout_gravity="bottom" android:id="@id/vv_preview_bottom_action" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:id="@id/vv_preview_bottom_parent" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="start|center" android:id="@id/vv_preview_back" android:background="@drawable/bg_thumbnail_background_full" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_vector_close" android:scaleType="centerInside" android:contentDescription="@string/accessibility_live_edit_exit_button" android:layout_marginStart="@dimen/bottom_picker_margin" />
            <ImageView android:layout_gravity="start|center" android:id="@id/vv_segment_preview" android:background="@drawable/bg_thumbnail_background_full" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_vector_play" android:scaleType="centerInside" android:contentDescription="@string/accessibility_live_preview_button" android:layout_marginStart="@dimen/bottom_picker_margin" />
            <com.android.camera.ui.CameraSnapView android:layout_gravity="center" android:id="@id/vv_preview_save_circle" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bottom_snap_width" android:layout_height="@dimen/bottom_snap_width" android:contentDescription="@string/accessibility_shutter_button" />
            <FrameLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.airbnb.lottie.LottieAnimationView android:id="@id/vv_preview_save" android:focusable="false" android:clickable="true" android:layout_width="@dimen/vv_progress_save_width" android:layout_height="@dimen/vv_progress_save_width" android:contentDescription="@string/accessibility_shutter_complete_button" app:lottie_autoPlay="false" app:lottie_loop="false" />
            </FrameLayout>
            <ImageView android:layout_gravity="center" android:id="@id/vv_preview_next" android:focusable="false" android:clickable="true" android:layout_width="@dimen/vv_progress_save_width" android:layout_height="@dimen/vv_progress_save_width" android:src="@drawable/ic_live_record_next" android:scaleType="centerInside" android:contentDescription="@string/accessibility_shutter_next_button" />
            <ImageView android:layout_gravity="center" android:id="@id/vv_preview_operation_image" android:focusable="false" android:clickable="true" android:layout_width="@dimen/vv_progress_save_width" android:layout_height="@dimen/vv_progress_save_width" android:src="@drawable/ic_vv_save_progress" android:scaleType="centerCrop" android:contentDescription="@string/accessibility_shutter_saving_button" />
            <ImageView android:layout_gravity="end|center" android:id="@id/vv_preview_share" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_vector_share" android:scaleType="centerInside" android:contentDescription="@string/live_edit_share_title" android:layout_marginEnd="@dimen/bottom_picker_margin" />
            <ProgressBar android:layout_gravity="end|center" android:id="@id/vv_share_progress" android:background="@drawable/bg_thumbnail_background_full" android:padding="12.0dip" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:scaleType="centerInside" android:indeterminateDrawable="@drawable/vv_process_progress" android:indeterminateDuration="@integer/post_process_duration" android:contentDescription="@string/accessibility_shutter_saving_button" android:layout_marginEnd="@dimen/bottom_picker_margin" style="?android:progressBarStyleLarge" />
            <ImageView android:layout_gravity="end|center" android:id="@id/vv_segment_reverse" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_vector_reverse" android:scaleType="centerInside" android:contentDescription="@string/accessibility_live_reverse_button" android:layout_marginEnd="@dimen/bottom_picker_margin" />
        </FrameLayout>
    </FrameLayout>
    <include layout="@layout/fragment_vv_exit" />
    <include layout="@layout/fragment_vv_share" />
</FrameLayout>