<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SurfaceView android:id="@id/video_sky_play_surface" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ImageView android:layout_gravity="center" android:id="@id/dolly_zoom_resume_play" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_vector_play" android:scaleType="centerInside" android:contentDescription="@string/accessibility_preview_button" />
    <FrameLayout android:layout_gravity="bottom" android:id="@id/vv_preview_bottom_action" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:id="@id/vv_preview_bottom_parent" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="start|center" android:id="@id/dolly_zoom_give_up_to_preview" android:background="@drawable/bg_thumbnail_background_full" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_vector_close" android:scaleType="centerInside" android:contentDescription="@string/accessibility_live_edit_exit_button" android:layout_marginStart="@dimen/bottom_picker_margin" />
            <ImageView android:layout_gravity="end|center" android:id="@id/dolly_zoom_stop_capture" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_next_step" android:scaleType="centerInside" android:contentDescription="@string/accessibility_shutter_next_button" android:layout_marginEnd="@dimen/bottom_picker_margin" />
            <com.android.camera.ui.CameraSnapView android:layout_gravity="center" android:id="@id/dolly_zoom_shutter_button" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bottom_snap_width" android:layout_height="@dimen/bottom_snap_width" android:contentDescription="@string/accessibility_shutter_button" />
            <com.airbnb.lottie.LottieAnimationView android:layout_gravity="center" android:id="@id/dolly_zoom_save_button" android:focusable="false" android:clickable="true" android:layout_width="@dimen/vv_progress_save_width" android:layout_height="@dimen/vv_progress_save_width" android:scaleType="centerInside" android:contentDescription="@string/accessibility_shutter_complete_button" />
            <ImageView android:layout_gravity="center" android:id="@id/dolly_zoom_snap_view_progress" android:focusable="false" android:clickable="true" android:layout_width="@dimen/vv_progress_save_width" android:layout_height="@dimen/vv_progress_save_width" android:src="@drawable/ic_vv_save_progress" android:scaleType="centerCrop" android:contentDescription="@string/accessibility_shutter_saving_button" />
            <ImageView android:layout_gravity="end|center" android:id="@id/dolly_zoom_save_and_share" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_vector_share" android:scaleType="centerInside" android:contentDescription="@string/live_edit_share_title" android:layout_marginEnd="@dimen/bottom_picker_margin" />
            <ProgressBar android:layout_gravity="end|center" android:id="@id/dolly_zoom_share_progress" android:background="@drawable/bg_thumbnail_background_full" android:padding="12.0dip" android:focusable="false" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:scaleType="centerInside" android:indeterminateDrawable="@drawable/vv_process_progress" android:indeterminateDuration="400" android:layout_marginEnd="@dimen/bottom_picker_margin" style="?android:progressBarStyleLarge" />
        </FrameLayout>
    </FrameLayout>
    <include layout="@layout/fragment_vv_share" />
</FrameLayout>